# media-hub

./: .dockerignore  .env.example  .env.production  .env.staging  .gitignore  JWT_DEVELOPMENT_LOG.md  README-CICD.md  README.md  docker-compose.dev.yml  docker-compose.yml  nginx-media-hub.conf  nginx.conf  package-lock.json
.github/workflows/: ci.yml
backend/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  cargo.toml
backend/ai-service/: .env.example  main.py  requirements.txt
backend/ai-service/models/: __init__.py  analysis_models.py
backend/ai-service/services/: __init__.py  (+2 more)
backend/media-server/: .env.example  COS_SETUP.md  Cargo.toml  LOGGING_INTEGRATION.md  cookies.txt  media_hub.db  temp_credentials.json  test_cos_handlers.sh  test_env  test_env.rs  test_logging.sh
backend/media-server/migrations/: 001_create_users_table.sql  002_create_media_table.sql  003_create_ai_analysis_table.sql
backend/media-server/src/: ai_client.rs  auth.rs  database.rs  logging.rs  main.rs  routes.rs  user.rs
backend/media-server/src/credentials/: auth.rs  jwt.rs  mod.rs  user.rs
backend/media-server/src/handlers/: ai_handlers.rs  auth_handlers.rs  cos_handlers.rs  media_handlers.rs  mod.rs  system_handlers.rs
backend/media-wasm/: Cargo.toml
frontend/: AIRBNB_ESLINT.md  Dockerfile  Dockerfile.dev  FORMATTING.md  docker-nginx.conf  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  test_cos_upload.md  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
scripts/: backup.sh  deploy.sh  quality-check.sh  setup-dev.sh  test.sh
(+17 files in other folders)
