[package]
name = "media-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
# tower-cookies = "0.10"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bcrypt = "0.17"
jsonwebtoken = "9.3"
once_cell = "1.19"
base64 = "0.22"
std-semaphore = "0.1"
time = "0.3"
dotenv = "0.15"
cos-rust-sdk = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }